# tock-py

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  VERSION  demo-bot.py  demo-webhook.py  demo-websocket.py  demo_bot.py  index.html  refactoring.patch  requirements.txt  setup.cfg  setup.py  test.py
examples/: webhook.py  websocket.py
tock/: __init__.py  __version__.py  bot.py  bus.py  connector.py  context.py  helpers.py  intent.py  models.py  schemas.py  server.py  story.py  webhook.py  websocket.py
tock/context/: botstorage.py  context.py  contexts.py  file.py  memory.py
tock/session/: file.py  memory.py  session.py  storage.py
tock/tests/: test_context.py  test_filecontext.py  test_models.py  test_schemas.py
tock/tests/context/: test_file.py  test_memory.py
tock/tests/session/: test_file.py  test_memory.py
