[metadata]
name = tock-py
version = attr: tock.__version__
description = Build chatbots using Tock and Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Erwan LE BESCOND
author_email = elebescond@gmail.com
url = https://github.com/theopenconversationkit/tock-py/
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = tock
install_requires = file: requirements.txt

[bumpversion]
commit = True
tag = True
current_version = 1.0.1
[bumpversion:file:tock/__init__.py]
